[gd_scene load_steps=8 format=2]

[ext_resource path="res://map/horizontal.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://manager/level_movement_manager.tscn" type="PackedScene" id=3]
[ext_resource path="res://manager/spawn_manager.tscn" type="PackedScene" id=4]
[ext_resource path="res://map/vertical.tscn" type="PackedScene" id=5]
[ext_resource path="res://object/death_zone.tscn" type="PackedScene" id=6]
[ext_resource path="res://map/level.gd" type="Script" id=8]

[node name="level" type="Node2D"]
script = ExtResource( 8 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 498, 530 )

[node name="level_movement_manager" parent="." instance=ExtResource( 3 )]

[node name="floor" parent="level_movement_manager" instance=ExtResource( 1 )]
position = Vector2( 0, 544 )

[node name="ceiling" parent="level_movement_manager" instance=ExtResource( 1 )]

[node name="walls" parent="level_movement_manager" groups=["WALL"] instance=ExtResource( 5 )]

[node name="spawn_manager" parent="." instance=ExtResource( 4 )]

[node name="death_area" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 144 )

[connection signal="spawning" from="spawn_manager" to="." method="_on_spawn_manager_spawning"]
[connection signal="death" from="death_area" to="." method="_on_death_area_death"]

[editable path="level_movement_manager/floor"]
[editable path="level_movement_manager/ceiling"]
[editable path="level_movement_manager/walls"]
